--- a/styles/sass/components/_footer.sass
+++ b/styles/sass/components/_footer.sass
@@ -21,16 +21,16 @@ footer
             @include bs.from(xl)
                 grid-area: 1 / 1 / span 3 / span 1
                 order: 1
-            >img
-                width: 4em
+            >div
+                width: 6em
         >div:nth-child(2)
             grid-column: span 3
             @include flex($justify: center)
             @include bs.from(xl)
                 grid-area: 1 / 6 / span 3 / span 1
                 order: 3
-            >img
-                width: 6em
+            >div
+                width: 8em
         >p
             grid-column: span 6
             padding: 0 10%
