--- a/styles/sass/components/_header.sass
+++ b/styles/sass/components/_header.sass
@@ -30,7 +30,7 @@ header
                 @include flex($justify: flex-start)
                 padding: 0
             >a
-                >img
+                >div
                     width: 3.5em
 
         >form
@@ -115,7 +115,7 @@ header
                 position: relative
                 >div.avatar-container
                     position: relative
-                    >img
+                    >div.avatar
                         height: 2.5em
                         border-radius: 25px
                         cursor: pointer
