finish optimizing lint

--- a/styles/sass/components/_checkout.sass
+++ b/styles/sass/components/_checkout.sass
@@ -31,12 +31,12 @@ div.checkout-container
                 margin-bottom: .5em
                 transition: $trs-basic
                 box-shadow: $bs-card-md
-                >img
+                >div.image-container
                     @include card-img
                     box-shadow: unset
                     height: auto
                     width: 120px
-                >div
+                >div.item
                     @include flex($align: stretch)
                     flex-grow: 10
                     padding: .3em .5em
