--- a/styles/index.css
+++ b/styles/index.css
@@ -338,7 +338,13 @@ header nav > div.sublinks > div.user-container > div.avatar-container {
   position: relative;
 }
 header nav > div.sublinks > div.user-container > div.avatar-container > div.avatar {
-  height: 2.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  overflow: hidden;
+  width: 2.5em;
   border-radius: 25px;
   cursor: pointer;
 }
@@ -1299,6 +1305,11 @@ header nav > div.sublinks > div.user-container > div.user-sublinks > ul > li > a
   }
 }
 .main-section > .movie-card-container > div.slider > a > div.image-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
   flex: 2;
   object-position: none;
   position: relative;
@@ -1734,7 +1745,7 @@ div.subsidiary-section div.subsidiary-container > section.tab-container > div.ta
   margin-bottom: 0.5em;
   transition: all 0.3s linear;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > img {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item-image {
   height: auto;
   max-width: 100%;
   display: block;
@@ -1744,7 +1755,7 @@ div.subsidiary-section div.subsidiary-container > section.tab-container > div.ta
   height: auto;
   width: 180px;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -1753,7 +1764,7 @@ div.subsidiary-section div.subsidiary-container > section.tab-container > div.ta
   flex-grow: 10;
   padding: 0.3em 0.5em;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(1) {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(1) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1763,25 +1774,25 @@ div.subsidiary-section div.subsidiary-container > section.tab-container > div.ta
   color: black;
   width: 75%;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(1) * {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(1) * {
   display: inline-block;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(1) > h4 {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(1) > h4 {
   width: 100%;
   color: #c6d4df;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(1) > i {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(1) > i {
   width: 100%;
   color: #6f6f6f;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(1) > small {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(1) > small {
   white-space: nowrap;
   overflow: hidden;
   width: 100%;
   font-size: 0.8em;
   color: #6f6f6f;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(2) {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(2) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1789,25 +1800,25 @@ div.subsidiary-section div.subsidiary-container > section.tab-container > div.ta
   gap: 0;
   width: 25%;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(2) > div:nth-child(1) {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(2) > div:nth-child(1) {
   background-color: #4c6b22;
   display: inline;
   padding: 0.1em 0.3em;
   color: #a4d007;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(2) > div:nth-child(2) {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(2) > div:nth-child(2) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
   gap: 0;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(2) > div:nth-child(2) > p:nth-child(1) {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(2) > div:nth-child(2) > p:nth-child(1) {
   text-decoration: line-through;
   color: #6f6f6f;
   font-size: 0.7em;
 }
-div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div > div:nth-child(2) > div:nth-child(2) > p:nth-child(2) {
+div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-list > div:not(:first-child) > a.tab-item > div.item > div:nth-child(2) > div:nth-child(2) > p:nth-child(2) {
   color: #c6d4df;
   font-size: 0.8em;
 }
@@ -1883,10 +1894,10 @@ div.subsidiary-section div.subsidiary-container > section.tab-container > div.ta
     background-color: #f2ecff;
     color: #302c3a;
   }
-  div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-viewer > div > img {
+  div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-viewer > div > div.image-container {
     margin-bottom: 0.25em;
+    width: 100%;
     height: auto;
-    max-width: 100%;
   }
   div.subsidiary-section div.subsidiary-container > section.tab-container > div.tab-viewer > div.active {
     opacity: 1;
@@ -5697,7 +5708,7 @@ div.checkout-container > div.cart-container > div.cart-item-container > a.cart-i
   transition: all 0.3s linear;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > img {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.image-container {
   height: auto;
   max-width: 100%;
   display: block;
@@ -5707,7 +5718,7 @@ div.checkout-container > div.cart-container > div.cart-item-container > a.cart-i
   height: auto;
   width: 120px;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -5716,7 +5727,7 @@ div.checkout-container > div.cart-container > div.cart-item-container > a.cart-i
   flex-grow: 10;
   padding: 0.3em 0.5em;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(1) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(1) {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -5727,25 +5738,25 @@ div.checkout-container > div.cart-container > div.cart-item-container > a.cart-i
   color: black;
   width: 75%;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(1) * {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(1) * {
   display: inline-block;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(1) > h4 {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(1) > h4 {
   width: 100%;
   color: #c6d4df;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(1) > i {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(1) > i {
   width: 100%;
   color: #6f6f6f;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(1) > small {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(1) > small {
   white-space: nowrap;
   overflow: hidden;
   width: 100%;
   font-size: 0.8em;
   color: #6f6f6f;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) {
   flex: 0;
   display: flex;
   flex-direction: column;
@@ -5753,46 +5764,46 @@ div.checkout-container > div.cart-container > div.cart-item-container > a.cart-i
   align-items: stretch;
   gap: 0;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.prices {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: stretch;
   gap: 0.5em;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.prices > div:nth-child(1) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(1) {
   background-color: #4c6b22;
   display: inline;
   padding: 0.1em 0.3em;
   color: #a4d007;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.prices > div:nth-child(2) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(2) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
   gap: 0;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.prices > div:nth-child(2) > p:nth-child(1) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(2) > p:nth-child(1) {
   text-decoration: line-through;
   color: #6f6f6f;
   font-size: 0.7em;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.prices > div:nth-child(2) > p:nth-child(2) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(2) > p:nth-child(2) {
   color: #c6d4df;
   font-size: 0.8em;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.remove {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.remove {
   text-align: right;
   padding: 0.5em;
   z-index: 100;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.remove > p {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.remove > p {
   text-decoration: underline;
   font-size: 0.8em;
   color: #6f6f6f;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div > div:nth-child(2) > div.remove:hover > p {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.remove:hover > p {
   color: #4c565d;
 }
 div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item:last-child {
