--- a/styles/sass/components/_admin.sass
+++ b/styles/sass/components/_admin.sass
@@ -45,6 +45,8 @@ section.admin-container
             border-bottom: $brd-admin-gray
             >a
                 @include headLink
+                >div
+                    overflow: hidden
         >.search
             @include adminSearch($fc-svg: $fc-admin-white, $bgc: $bgc-admin-terminal-soft, $bl: $fc-admin-white-soft)
         >.dashboard
