--- a/styles/sass/abstracts/mixins/_header-mixins.sass
+++ b/styles/sass/abstracts/mixins/_header-mixins.sass
@@ -24,5 +24,7 @@
             padding: .8em .5em
             cursor: pointer
             white-space: nowrap
+            svg
+                color: $fc-default
             &:hover
                 background: $bgc-subsidiary-hilight
