--- a/styles/sass/components/_home.sass
+++ b/styles/sass/components/_home.sass
@@ -287,6 +287,7 @@ div.subsidiary-section
                 transition: .3s
                 z-index: 2
                 background: none
+                cursor: pointer
                 >p
                     font-size: 1em
                     color: $fc-default
