--- a/styles/sass/abstracts/mixins/_header-mixins.sass
+++ b/styles/sass/abstracts/mixins/_header-mixins.sass
@@ -16,6 +16,7 @@
         visibility: visible
         opacity: 1
         z-index: 10
+        box-shadow: $bs-card-lg
     >ul
         @include grid($columns: 1fr)
         text-transform: capitalize
